# django-showroom

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/storybook/: apps.py  storybookReact.registry.generated.js  storybookReact.runtime.js  urls.py
components/: tokens.css
components/cotton/: alpine.js  recipes.css
components/icons/: index.ts  search.tsx
config/: settings.py  urls.py
design-system/cotton/: alpine.js
design-system/src/: cn.ts  tokens.css
django_storybook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: ADAPTERS.md  ADDING_COMPONENTS.md  ARCHITECTURE.md  BOOTSTRAP_NEW_REPO.md  CONTRACTS.md  CONTRIBUTING.md  CURRENT_SETUP_1TO1.md  RECIPES.md  RELEASE.md  SPLIT_VIEW.md  getting-started.md  index.md
scripts/: check-recipes.mjs  generate-ds-icons.mjs  generate-react-registry.mjs  generate-story-fixtures.mjs  generate-storybook-react-registry.mjs  validate-contracts.mjs  validate-storybook-components.mjs
showroom/: README.md  design_icons.py  showroomReact.runtime.js  urls.py  views.py
showroom/catalog/: components.py  icons.py  tokens.py
showroom/schemas/: README.md  component.schema.json  stories.schema.json
showroom/scripts/: check-recipes.mjs  generate-ds-icons.mjs  generate-react-registry.mjs  generate-showroom-react-registry.mjs  generate-story-fixtures.mjs  serve-static.mjs  smoke-react-runtime.mjs  validate-contracts.mjs  validate-showroom-components.mjs
showroom/templatetags/: ds_icons.py
static/css/: input.css  output.css
static/js/: core.bundle.js  core.js  showroomReact.js  storybookReact.bundle.js  storybookReact.js
static/showroom/: index.html  styles.css
static/storybook/: index.html  story-fixtures.generated.json  storybookReact.registry.generated.js
storybook/: README.md  views.py
storybook/catalog/: __init__.py  components.py  icons.py
storybook/schemas/: README.md  component.schema.json  stories.schema.json
storybook/scripts/: generate-react-registry.mjs  generate-story-fixtures.mjs  generate-storybook-react-registry.mjs  serve-static.mjs  smoke-react-runtime.mjs
storybook/templatetags/: ds_icons.py
storybook_config/: asgi.py  settings.py  template_patches.py  urls.py  wsgi.py
tests/: conftest.py  test_components.py  test_contracts.py  test_design_icons.py  test_registry.py  test_tokens.py  test_views.py
(+92 files in other folders)
