[project]
name = "django-showroom"
version = "0.1.0a1"
description = "Django-native Showroom for building design systems with multi-framework adapters and shared recipe CSS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Anton Wieprecht" }
]
dependencies = [
  "django>=5.1.0",
  "django-cotton>=2.0.3",
]

[tool.setuptools.packages.find]
include = ["showroom*", "config*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
